<resources>
    <string name="app_name">Quiz_App</string>
    <string name="many">Many</string>
    <string name="quiz_app">Quiz App</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="what_is_android">What is Android?</string>
    <string name="stack_of_software_s_for_mobility">stack of software\'s for mobility</string>
    <string name="google_mobile_device_name">Google mobile device name</string>
    <string name="virtual_machine">Virtual machine</string>
    <string name="android_image">android</string>

    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="how_many_applications_are_there_in_a_given_task_in_android">How many applications are there in a given task in android?</string>
    <string name="return_values_of_onstartcommand">Return values of onStartCommand()</string>
    <string name="start_sticky">START_STICKY</string>
    <string name="start_not_sticky">START_NOT_STICKY</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="layouts_available_in_android">Layouts available in android?</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="next">Next</string>
    <string name="which_is_the_android_icon">Which is the Android Icon?</string>
    <string name="congratulation">Congratulation</string>
    <string name="user">User</string>
    <string name="start_redeliver_intent">start_redeliver_intent</string>
    <string name="android_recap">Android Recap</string>
    <string name="all_of_the_above">All Of The Above</string>
</resources>
