<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background=" #436587"
    tools:context=".Main5Activity">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/layouts_available_in_android"
        android:textSize="26sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        />




    <CheckBox
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        android:textAppearance="?android:textAppearanceMedium" />



    <CheckBox
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        android:textAppearance="?android:textAppearanceMedium" />


    <CheckBox
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_of_the_above"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"

        android:layout_margin="12sp"
        android:text="@string/next"/>
</LinearLayout>

