<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#436587"
    tools:context=".Main4Activity">




    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_values_of_onstartcommand"
        android:textSize="26sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        />



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/start_sticky"
        android:id="@+id/one"
        android:layout_margin="12sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_margin="12sp"
        android:id="@+id/two"
        android:text="@string/start_not_sticky"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_margin="12sp"
        android:id="@+id/three"
        android:text="@string/start_redeliver_intent"/>



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_margin="12sp"
        android:id="@+id/four"
        android:text="@string/all_of_the_above"/>


    </LinearLayout>